--- a/home.html
+++ b/home.html
@@ -282,9 +282,7 @@
                     </div>
                 </div>
             </section>
-        </main>
-        <!-- ? -->
-        <main>
+
             <section class="border_lat">
                 <div class="container py-5">
                     <div class="row text-white">
@@ -344,7 +342,144 @@
                     </div>
                 </div>
             </section>
+
+            <section class="border_lat py-5">
+                <div
+                    class="bande_annonce_flags d-flex justify-content-center py-5"
+                >
+                    <img
+                        src="./assets/illustrations/Home/Bathome9_ba.png"
+                        alt=""
+                        width="80%"
+                    />
+                </div>
+            </section>
         </main>
+
+        <section class="forms_section text-white">
+            <div class="border_lat" style="margin: 0 7%; padding: 5% 0">
+                <div class="container">
+                    <h1 class="text-center text-uppercase fw-bold my-0">
+                        Prenons contact
+                    </h1>
+                </div>
+
+                <div class="container">
+                    <form action="" id="newsletter">
+                        <!-- form---groupe 1.  -->
+
+                        <div class="form__group">
+                            <label
+                                class="form-group__label text-uppercase"
+                                for="mail-input"
+                            >
+                                Adresse email
+                            </label>
+
+                            <input
+                                class="form-group__input"
+                                id="mail-input"
+                                placeholder="Adresse email"
+                                type="text"
+                            />
+                        </div>
+
+                        <!-- form---groupe 2.  -->
+
+                        <div class="form__group">
+                            <label
+                                class="form-group__label text-uppercase"
+                                for="newsletter-input"
+                                >Newsletter
+                            </label>
+
+                            <span
+                                class="row"
+                                style="
+                                    padding-left: 2.5em;
+                                    color: rgba(255, 255, 255, 0.33);
+                                "
+                            >
+                                En cochant cette case vous acceptez de recevoir
+                                l’actualité concernant les aventures de Batman :
+                            </span>
+
+                            <input
+                                class="form-group__input"
+                                id="newsletter-input"
+                                type="checkbox"
+                            />
+
+                            <div class="form__group dropdown">
+                                <img
+                                    alt=""
+                                    src="./assets/icons/Icones en + dans Home/icon_flèche_1.png"
+                                />
+
+                                <input
+                                    class="form-group__input"
+                                    placeholder="Choisissez la fréquence à laquelle vous souhaitez recevoir votre newsletter"
+                                    type="text"
+                                />
+
+                                <ul class="choix__fréquence">
+                                    <li>Une fois par semaines</li>
+                                    <li>
+                                        Une fois toutes les deux semaines (2
+                                        fois par mois)
+                                    </li>
+                                    <li>Une fois par mois</li>
+                                    <li>Une fois tous les trois mois</li>
+                                    <li>Une fois tous les 6 mois</li>
+                                </ul>
+                            </div>
+                            <input
+                                class="form__input"
+                                placeholder="Souhaitez vous recevoir des news"
+                                type="text"
+                            />
+
+                            <div class="btn-box">
+                                <div class="btn gradient-btn">
+                                    <span>Des films</span>
+                                </div>
+                                <div class="btn gradient-btn">
+                                    <span>Des comics</span>
+                                </div>
+                                <div class="btn gradient-btn">
+                                    <span>De Tout</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- form---groupe 3.  -->
+
+                        <div class="form__group">
+                            <label
+                                class="form-group__label text-uppercase"
+                                for="message-input"
+                            >
+                                Message
+                            </label>
+                            <input
+                                class="form-group__input"
+                                id="message-input"
+                                placeholder="Laissez un commentaire pour la communauté"
+                                type="text"
+                            />
+                        </div>
+
+                        <!-- form---groupe 4.  -->
+
+                        <div class="form__group d-flex justify-content-center">
+                            <button class="btn btn-primary text-uppercase">
+                                Confirmer
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
         <!-- !.................. end of content .................. -->
 
         <!-- .................. FOOTER .................. -->
