--- a/home.html
+++ b/home.html
@@ -310,17 +310,7 @@
       </section>
 
       <section class="border_lat py-5">
-        <div class="bande_annonce_flags d-flex justify-content-center py-5">
-          <img
-            src="./assets/illustrations/Home/Bathome9_ba.png"
-            alt=""
-            width="80%"
-          />
-        </div>
-      </section>
-
-      <section class="py-5">
-        <div class="video-trailer">
+        <div class="video-trailer mx-5">
           <iframe
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
